--- a/spin.toml
+++ b/spin.toml
@@ -15,5 +15,5 @@ source = "main.wasm"
 key_value_stores = ["default"]
 allowed_outbound_hosts = []
 [component.golab.build]
-command = "/home/conejo/go/bin/tinygo build -target=wasi -gc=leaking -no-debug -o main.wasm ."
+command = "tinygo build -target=wasi -gc=leaking -no-debug -o main.wasm ."
 watch = ["**/*.go", "go.mod"]
